# open3DMM

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  MAKEFILE  Open3dmm.sln  README.MD  README.md  TRD.TXT  build.zig  build.zig.zon  docker-compose.yaml  setvars.bat  version.def
.github/workflows/: CI.yml  build.yml  clang-format-check.yml  jekyll-gh-pages.yml
BREN/: BWLD.CPP  MATERIAL.CPP  TMAP.CPP  ZBMP.CPP  stdfile.c  stdmem.c
BREN/INC/: ANIMATE.H  BRASSERT.H  BRDIAG.H  BRENDER.H  BRFILE.H  BRFONT.H  BRHTON.H  BRMEM.H  BWLD.H  COLOUR.H  COMPILER.H  CUSTSUPT.H  FMT.H  FMTPROTO.H  FWPROTO.H  MODEL.H  MSCIFIX.H  POSITION.H  QHTON.H  QUAT.H  SCALAR.H  TMAP.H  TRANSFRM.H  VECTOR.H  ZBMP.H
INC/: ACTOR.H  APE.H  BROWSER.H  ESL.H  HELPBOOK.H  HELPRES.H  KIDSANIM.H  MODL.H  MOVIE.H  MSND.H  MTRL.H  POPUP.H  PORTF.H  PROJMAIN.H  SCENE.H  SCNSORT.H  SOCDEF.H  SOCDEFN.H  SOCRES.H  SOCUTIL.H  STDIODEF.H  STDIOPOS.CHH  STUDIO.H  TAGL.H  TAGMAN.H  TDF.H  TDFMAKE.H  TGOB.H  UTEST.H  UTESTRES.H
Open3dmm/: FunctionNames.cs  GameTimer.cs  Helper.cs  Hook.cs  HookFunctionAttribute.cs  ManagedArray.cs  NativeAbstraction.Graphics.cs  NativeAbstraction.Hooks.cs  NativeAbstraction.Imports.cs  NativeAbstraction.Methods.cs  NativeAbstraction.Patches.cs  NativeAbstraction.WindowsApi.cs  NativeAbstraction.cs  NativeClassInfo.cs  NativeHandle.cs  NativeObject.cs  NativeObjectFactory.cs  Open3dmm.csproj  Patch.cs  Program.cs  SkipLoadingScreensPatch.cs  UnmanagedFunctionCall.cs  app.config  packages.config
Open3dmm/BRender/: BrActor.cs  BrActorTypes.cs  BrAngle.cs  BrBounds.cs  BrCamera.cs  BrCameraTypes.cs  BrColor.cs  BrEuler.cs  BrEulerOrder.cs  BrFVector2.cs  BrFVector3.cs  BrFVector4.cs  BrFace.cs  BrFaceFlags.cs  BrFaceGroup.cs  BrFraction.cs  BrLight.cs  BrLightType.cs  BrMaterial.cs  BrMaterialFlags.cs  BrMaterialUpdateFlags.cs  BrMatrix23.cs  BrMatrix34.cs  BrMatrix44.cs  BrModel.cs  BrPixelMap.cs  BrPixelMapType.cs  BrRenderStyles.cs  BrScalar.cs  BrTransform.cs  BrUFraction.cs  BrVector2.cs  BrVector3.cs  BrVector4.cs  BrVertex.cs  BrVertexGroup.cs
Open3dmm/Classes/: ACTN.cs  ACTR.cs  APE.cs  APP.cs  APPB.cs  All.cs  BACO.cs  BASE.cs  BCL.cs  BCLS.cs  BKGD.cs  BLCK.cs  BLL.cs  BODY.cs  BRCL.cs  BRCN.cs  BSF.cs  BSM.cs  BWLD.cs  CABO.cs  CAMS.cs  CFL.cs  CLOK.cs  CMTL.cs  CTL.cs  CURS.cs  ClassID.cs  DOCB.cs  FIL.cs  GKDS.cs  GNV.cs  GOB.cs  GOKD.cs  GPT.cs  GPT_UnkStruct1.cs  MBMP.cs  MDWS.cs  MIDS.cs  MODL.cs  POINT.cs  (+11 more)
Open3dmm/Graphics/: BrWorldRenderer.cs
Open3dmm/PE/: IMAGE_IMPORT_BY_NAME.cs  IMAGE_IMPORT_DESCRIPTOR.cs  PEHeaderExtensions.cs
Open3dmm/Properties/: AssemblyInfo.cs
Open3dmm/Research/: GOK.txt  MBMP.txt  Reverse0042B330.txt
Open3dmm/WinApi/: ApiDetour.cs  Kernel32.cs  LibraryNames.cs  PInvoke.cs  VK.cs
Open3dmmBootstrapper/: Open3dmmBootstrapper.cpp  Open3dmmBootstrapper.vcxproj  Open3dmmBootstrapper.vcxproj.filters
SETUP/AUTORUN/: AUTORUN.CPP  RESOURCE.H  TLHELP32.H
SETUP/CUSTDLL/: CREDITS.CPP  WINMAN.CPP
SRC/BUILDING/: BLDGHD.CHT  SNACKBAR.CHT
SRC/ENGINE/: ACTOR.CPP  ACTREDIT.CPP  ACTRSAVE.CPP  ACTRSND.CPP  BKGD.CPP  MOVIE.CPP  MSND.CPP  SCENE.CPP  SREC.CPP  TAGL.CPP  TAGMAN.CPP  TBOX.CPP  TMPL.CPP
SRC/HELPAUD/: MAKEFILE
SRC/SHARED/: MAKEFILE  UTIL.CHT
SRC/STUDIO/: APE.CPP  BROWSER.CPP  ESL.CPP  HELPBOOK.CHT  MAKEFILE  MMINSTAL.CPP  MMINSTAL.H  POPUP.CPP  PORTF.CPP  SCNSORT.CPP  SPLOT.CPP  STDIOBRW.CPP  STDIOCRS.H  STUDIO.CPP  TATR.CPP  TBPROJ2.CHT  UTEST.CPP
TOOLS/: MAKEFILE  pbmtobmp.cpp
audioman/: audioman.cpp
bren/: brenfun.cpp  makefile  stderr.c  stdfile.c
bren/inc/: G386IFIX.H  SCALE.H  TRAVERSE.H  actor.h  angles.h  blockops.h  bren.h  brerr.h  brlimits.h  camera.h  fixed.h  hton.h  light.h  material.h  matrix.h  pixelmap.h  pool.h  quantize.h  vecfns.h  wtcifix.h  zbproto.h
cmake/: ExtractVersion.cmake  FindAudioMan.cmake  FindBRender.cmake  FindCCache.cmake  FindClangTidy.cmake  TargetChompSources.cmake
inc/: BUILDGOB.H  KIDGSDEF.H  SPLOT.H  STDIOSCB.H  TDT.H  UTEST.H  VERSION.H  bkgd.h  body.h  browser.h  helptops.h  kidgs.chh  portf.h  sharedef.h  sitobren.h  soc.h  srec.h  stdiodef.h  studio.h  tatr.h  tbox.h  tmpl.h  utest.h  utestres.h
kauai/: makefile
kauai/SRC/: APPB.CPP  APPB.H  APPBMAC.CPP  APPBWIN.CPP  BASE.CPP  BASE.H  CHCM.CPP  CHCM.H  CHTRANS.H  CHUNK.CPP  CHUNK.H  CLIP.H  CLOK.CPP  CLOK.H  CMD.CPP  CMD.H  CODEC.H  CODKAUAI.CPP  CODKPRI.H  CRF.CPP  CRF.H  CSAPI.H  CTL.CPP  CTL.H  CURSOR.CPP  DLG.CPP  DLGMAC.CPP  DOCB.CPP  DOCB.H  FILE.CPP  FILE.H  FILEMAC.CPP  FNI.H  FNIWIN.CPP  FT.CPP  GFX.CPP  GFXMAC.CPP  GFXWIN.CPP  GOB.CPP  GOB.H  (+59 more)
kauai/TOOLS/: CHDOC.CPP  CHDOC.H  CHED.H  CHELP.CPP  CHELPDMP.CPP  CHELPEXP.CPP  CHELPEXP.H  CHHEX.CPP  CHMBMP.CPP  CHOMP.CPP  CHOMP.H  CHTOP.CPP  MAKEFILE  MKMBMP.CPP
kauai/src/: APPB.H  CLIP.CPP  CMD.CPP  CURSOR.H  DOCB.H  FNIMAC.CPP  FRAME.H  FRAMEDEF.H  FRAMERES.H  KIDWORLD.H  MENU.H  MIDIDEV.H  MIDIDEV2.H  PICWIN.CPP  REGION.CPP  REGION.H  RTXT.CPP  SCREXEG.CPP  STREAM.CPP  TEST.CPP  UTILMEM.H  UTILRND.CPP  appb.cpp  appbwin.cpp  audioman.h  base.cpp  base.h  chse.cpp  chse.h  clip.h  codec.cpp  crf.cpp  debug.h  dlg.h  dlgwin.cpp  docb.cpp  filewin.cpp  fni.h  fniwin.cpp  ft.cpp  (+38 more)
kauai/tools/: CHED.CPP  CHMERGE.CPP  CHPIC.CPP  CHTXT.CPP  chdoc.cpp  chedres.h  chelp.cpp  chelp.h  chelpres.h  chgrp.cpp  kpack.cpp
src/Open3dmm.Game/: Open3dmm.Game.csproj  Program.cs
src/Open3dmm.Legacy/: App.Callbacks.cs  App.cs  AppContext.cs  Application.cs  (+52 more)
src/Open3dmm.Legacy.Core/: ChunkIdentifier.cs  ColorBgra.cs  EncodingTypes.cs  Fixed.cs  Glmp.cs  ISortedList.cs  ListExtensions.cs  Open3dmm.Legacy.Core.csproj  Platform.cs  ReferenceIdentifier.cs  ReferencePath.cs  Script.cs  SortedList.cs  Tag.cs  ThrowHelper.cs
src/Open3dmm.Legacy.Veldrid/: BmdlModel.cs  BoundsCalculator.cs  ColorSwap.cs  CustomShader.cs  MtrlMaterial.cs  Open3dmm.Legacy.Veldrid.csproj  Ray.cs  VeldridExtensions.cs  VeldridGraphicsContext.cs  VertexPositionNormalTexture.cs  VertexPositionTexture.cs
tools/: MKTMAP.CPP  TDFMAKE.CPP  makefile  sitobren.cpp
(+296 files in other folders)
